--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,52 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
+## Introduction
+### This project is intended to take data measured from personal activity trackers over a period of time and convert it into a readable format, as well as answer a few questions about the data.
 
 ## Loading and preprocessing the data
+### This step loads and prepares the data for analysis.
 
-
+library(knitr)
+prepdata <- read.csv("./activity.csv")
+actdata <- aggregate(steps ~ date, data=prepdata, sum, na.rm = TRUE)
+hist(actdata$steps, breaks=30, main="Total Steps per Day", xlab="Steps", ylab="Frequency")
 
 ## What is mean total number of steps taken per day?
+### Here we'll determine the average and median number of steps taken throughout a typical day.
 
-
+stepsmean <- mean(prepdata$steps, na.rm=TRUE)
+stepsmedian <- median(prepdata$steps, na.rm=TRUE)
+print(paste("The mean steps per day is:", stepsmean))
+print(paste("The median steps per day is:", stepsmedian))
 
 ## What is the average daily activity pattern?
+### Now let's see the busiest times per day, averaged over five-minute periods.
 
-
+stepsdata <- aggregate(steps ~ interval, data=prepdata, mean, na.rm=TRUE)
+plot(stepsdata$interval, stepsdata$steps, type="l", main="Average Steps over Five-Minute Interval", xlab="Intervals", ylab="Steps")
+maxsteps <- max(stepsdata$steps)
+print(paste("The most steps taken in any five-minute interval was:", maxsteps))
 
 ## Imputing missing values
+### There seems to be some missing values - let's replace those with the average number of steps per period.
 
+missingsteps <- sum(is.na(prepdata$steps))
+print(paste("There are", missingsteps, "missing values."))
 
+cleandata <- prepdata
+cleandata$steps[is.na(cleandata$steps)] <- mean(prepdata$steps, na.rm=TRUE)
+cleandataday <- aggregate(steps ~ date, data=cleandata, sum, na.rm=TRUE)
+hist(cleandataday$steps, breaks=30, main="Total Steps per Day - Adjusted", xlab="Steps", ylab="Frequency")
+
+cleanmean <- mean(cleandataday$steps)
+cleanmedian <- median(cleandataday$steps)
+print(paste("The mean is:", cleanmean))
+print(paste("The median is:", cleanmedian))
 
 ## Are there differences in activity patterns between weekdays and weekends?
+### Finally, we'll see when activity is highest: during the grind of the work week, or while enjoying the weekend.
+
+cleandata$date <- as.Date(cleandata$date)
+cleandata$dayname <- weekdays(cleandata$date)
+cleandata$weekend <- as.factor(ifelse(cleandata$dayname == "Saturday" | cleandata$dayname == "Sunday", "Weekend", "Weekday"))
+library(lattice)
+plotdata <- aggregate(steps ~ interval + weekend, cleandata, mean)
+xyplot(steps ~ interval | factor(weekend), data=plotdata, aspect=1/3, type="l")
